# medicine-finder

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml  review.md  start.sh
.claude/agents/: README.md  code-reviewer.md  researcher.md  test-runner.md
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  ratelimit.py  schemas.py
app/services/: openfda.py  rxnorm.py
app/static/: app.js  style.css
app/templates/: base.html  index.html  login.html  register.html
backend/: pyproject.toml  start.sh  stop.sh
backend/app/: auth.py  config.py  main.py  schemas.py  system.py
backend/app/auth/: deps.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/core/: clients.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_healthz.py  test_openfda.py  test_ratelimit.py  test_rxnorm.py  test_search_name.py  test_search_suggest.py  test_search_symptom.py  test_triage.py
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AdverseEvents.tsx  AuthForm.tsx  Disclaimer.tsx  LabelCard.tsx  NameSearch.tsx  Nav.tsx  SymptomSearch.tsx
frontend/lib/: api.ts  auth.tsx
planning/: plan.md  research.md  spec.md  symptom-search-cache.md  symptom-search-without-llm.md
tests/: conftest.py  test_auth.py  test_healthz.py  test_openfda.py  test_ratelimit.py  test_search_symptom.py
tests/fixtures/: openfda_event_ibuprofen.json  rxnorm_property_5640.json  rxnorm_rxcui_ibuprofen.json
(+12 files in other folders)
